# SARdine

./: .gitignore  AGENTS.md  ANNOTATION_CRITICAL_FIXES.md  CALIBRATE_CRITICAL_FIXES_APPLIED.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_ANALYSIS.md  CONTEXT_EXTRACTION_FIXES_SUMMARY.md  CONTRIBUTING.md  COORDINATE_FRAMES_FIXES_SUMMARY.md  CRITICAL_SCIENTIFIC_AUDIT.md  Cargo.toml  DC_FM_PROVIDER_FIXES_SUMMARY.md  DEBURST_CALIBRATION_OPTIMIZATION_ANALYSIS.md  DEBURST_CRITICAL_FIXES_APPLIED.md  DEM_IMPLEMENTATION_SUMMARY.md  DOPPLER_POLYNOMIAL_PARSING_FIX.md  DOPPLER_POLYNOMIAL_PARSING_FIX_BUILD_VERIFICATION.md  DOPPLER_POLYNOMIAL_PARSING_FIX_FINAL_STATUS.md  DOPPLER_POLYNOMIAL_PARSING_TEST_RESULTS.md  EPOCH_MISMATCH_FIX_SUMMARY.md  FINAL_PIPELINE_SUCCESS_REPORT.md  FINAL_SESSION_SUMMARY.md  HORNER_RULE_OPTIMIZATION.md  IW_MERGE_GRID_ALIGNMENT_FIX.md  LEGACY_STATUS.md  LICENSE  MASK_PROPAGATION_FIXES_SUMMARY.md  MEMORY_OPTIMIZATION_AND_VALIDATION_ENHANCEMENTS.md  MEMORY_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  MULTILOOK_TERRAIN_SPECKLE_FIXES.md  NEXT_STEPS_FIXES.md  NOTICE  OPTIMIZATION_COMPLETE.md  PACKAGE_CLEANUP_COMPLETE.md  PACKAGE_CLEANUP_SUMMARY.md  PHASE2_CLEANUP_COMPLETE.md  PHASE2_CLEANUP_EXECUTION.md  PHASOR_RECURRENCE_OPTIMIZATION.md  RANGE_DOPPLER_BURST_TIME_FIX_RUST_ONLY.md  (+44 more)
legacy/old_package_copy/SARdine/: Cargo.toml  README.md  pyproject.toml
legacy/old_package_copy/SARdine/benchmark/: BASELINE_REPORT.md  analyze_log.py  baseline_benchmark.py  equivalence_tests.py
legacy/old_package_copy/SARdine/benchmark/results/: bench_baseline.md  benchmark_log.txt
legacy/old_package_copy/SARdine/benchmark/results/bench_output/: processing_log.jsonl
legacy/old_package_copy/SARdine/docs/: DEEP_CODE_ANALYSIS_FINDINGS.md  core_refactor_suggestions.md  topsar_merge_refactor_plan.md
legacy/old_package_copy/SARdine/docs/development/scientific-improvements/: COMPREHENSIVE_SCIENTIFIC_AUDIT_2025.md  MATHEMATICAL_VALIDATION_REPORT.md
legacy/old_package_copy/SARdine/docs/scientific/: BACKSCATTER_METHODS.md
legacy/old_package_copy/SARdine/python/sardine/: __init__.py  cli.py  download.py  export.py  geotiff.py  memory_adaptive.py  partial_pipeline.py  performance.py  provenance.py  quality_flags.py  utils.py
legacy/old_package_copy/SARdine/python/sardine/metadata/: rtc_metadata.py
legacy/old_package_copy/SARdine/python/sardine/processors/: __init__.py  base.py
legacy/old_package_copy/SARdine/python/sardine/tests/: test_geocode_bbox.py
legacy/old_package_copy/SARdine/python/sardine/validation/: __init__.py  algorithm_tester.py  design_flaw_detector.py  gates.py  invariant_checker.py  reference_comparator.py  scientific_validator.py
legacy/old_package_copy/SARdine/python/tests/: conftest.py  test_asf_reference_comparison.py  test_backscatter_pipeline_integration.py  test_bindings_error_propagation.py  test_burst_timing_extraction.py  test_chunked_deburst.py  test_chunked_deburst_runtime.py  test_edge_cases.py  test_partial_pipeline_geotransform.py  test_provenance.py  test_quality_flags.py  test_rtc_metadata_builder.py
legacy/old_package_copy/SARdine/scripts/: analyze_artifacts.py  analyze_merge.py  check_cal_scalloping.py  check_output_quality.py  compare_asf_reference.py  compare_burst_quality.py  compare_dip_counts.py  create_annotated_viz.py  create_preview.py  debug_merge_dims.py  deep_comparison.py  deep_eval_step1.py  diagnose_alignment.py  diagnose_burst_seams.py  diagnose_geocoding.py  diagnose_scalloping.py  diagnose_shift.py  final_comparison.py  run_backscatter_timed.py  run_iw_pipeline_validation.py  run_sigma_audit_only.py  spectral_scalloping.py  test_early_pipeline.py  test_topsar_steps.py  validate_fused_plausibility.py  verify_shift.py
legacy/old_package_copy/SARdine/src/: lib.rs  types.rs  validation.rs
legacy/old_package_copy/SARdine/src/bindings/: calibration.rs  deburst.rs  dem.rs  download.rs  export.rs  merge.rs  mod.rs  orbit.rs  processing.rs  reader.rs  utils.rs  validation.rs
legacy/old_package_copy/SARdine/src/constants/: mod.rs  physical.rs  processing.rs  unit_conversion.rs
legacy/old_package_copy/SARdine/src/core/: coordinate_convention_test.rs  global_clamp_debug.rs  mod.rs  quality_flags.rs
legacy/old_package_copy/SARdine/src/core/calibration/: antenna.rs  apply.rs  audit.rs  io_xml.rs  lut.rs  (+5 more)
legacy/old_package_copy/SARdine/src/io/: dem.rs  mod.rs  parsing_tests.rs  parsing_validation.rs  sentinel1.rs
legacy/old_package_copy/SARdine/tests/: annotation_parser.rs  audit_equivalence_tests.rs  forward_geocoding_integration.rs  forward_geocoding_tests.rs  speckle_filter_tests.rs  test_snap_validation_sigma0_deburst.py
legacy/old_package_copy/SARdine/tests/data/: sentinel1_iw_noise_sample.xml
legacy/old_package_copy/SARdine/tests/integration/: analyze_calibration.py  check_calibration_lut.py  quick_subswath_test.sh  run_geocode_debug.sh  test_duration_debug.py  test_subswath_metadata_fix.sh
legacy/old_package_copy/SARdine/tests/python/: test_geocode_bbox.py
new_pipeline/: Cargo.toml  README.md
new_pipeline/sardine-py/: Cargo.toml  ardine  pyproject.toml
new_pipeline/sardine-py/src/: lib.rs
new_pipeline/scene/: Cargo.toml
new_pipeline/scene/examples/: dump_merged_sigma0.rs  dump_s1b_tc.rs
new_pipeline/scene/src/: apply_calibration.rs  calibration.rs  cog.rs  dem.rs  dem_fetch.rs  export.rs  geodesy.rs  geoid.rs  ground_range.rs  lib.rs  merge_subswaths.rs  multi_pol.rs  multi_slc_reader.rs  orbit.rs  orbit_fetch.rs  output_crs.rs  pipeline_options.rs  provenance.rs  run.rs  run_provenance.rs  scene_prep.rs  slc_fetch.rs  slc_reader.rs  slice_assembly.rs  speckle.rs  stac.rs  terrain_correction.rs  types.rs  validate.rs
new_pipeline/scene/src/insar/: coreg.rs  error.rs  interferogram.rs  mod.rs
new_pipeline/scene/src/parse/: mod.rs  xml.rs
new_pipeline/scene/tests/: no_silent_fallbacks.rs  orbit_dem_fit.rs  regression_s1a_20201005.rs  regression_s1b_20190123.rs  slc_fetch.rs
new_pipeline/validation/: Cargo.toml
new_pipeline/validation/scenes/: munich_s1b_utm32n.toml  munich_s1b_utm32n_ml4x1.toml
(+451 files in other folders)
