[workspace]
resolver = "2"
members = [
    "scene",
    "sardine-py",
    "validation",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/your-org/SARdine"
homepage   = "https://github.com/your-org/SARdine"
authors    = ["SARdine contributors"]
rust-version = "1.75"
