[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sardine"
version = "0.1.0"
description = "Sentinel-1 SAR backscatter processing — Python bindings"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "SARdine contributors" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.maturin]
# Build a mixed Rust+Python project.  The Python sources live under
# `python/sardine/` and the Rust extension is compiled into
# `sardine._sardine` (an abi3 wheel built from this crate's `cdylib`).
python-source = "python"
module-name = "sardine._sardine"
features = ["pyo3/extension-module"]
