[package]
name = "sardine"
version = "0.2.1"
edition = "2021"
authors = ["Steven Hill <steven@example.com>"]
description = "A Fast, Modular Sentinel-1 Backscatter Processor"
license = "MIT"
repository = "https://github.com/SARdine/SARdine"
keywords = ["SAR", "Sentinel-1", "Remote-Sensing", "Radar"]
categories = ["science", "algorithms"]

[lib]
name = "sardine"
crate-type = ["cdylib", "lib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
pythonize = "0.20"  # For serde to Python conversion

# Core numerical computing
ndarray = { version = "0.15", features = ["rayon", "blas"] }
num-complex = "0.4"
num-traits = "0.2"

# Performance optimizations  
num_cpus = "1.0"          # Better thread detection
wide = { version = "0.7", optional = true }              # SIMD operations

# I/O and data handling
gdal = { version = "0.16", features = ["array"] }
gdal-sys = "0.9"  # For VSI memory filesystem operations
proj = { version = "0.25", optional = true }  # PROJ library for high-precision geoid calculations
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # JSON serialization for metadata
serde_yaml = "0.9"  # YAML serialization for provenance
zip = "0.6"
tempfile = "3.8"
flate2 = "1.0"  # For gzip decompression of SRTM tiles

# HTTP client with blocking + cookie store for authenticated downloads
reqwest = { version = "0.11", features = ["blocking", "cookies"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

# Checksum verification
md5 = "0.7"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"  # For test logging
rayon = "1.7"  # Parallel processing
dirs = "5.0"   # Platform-specific directories

# Math and signal processing
rustfft = "6.1"
approx = "0.5"
regex = "1.11.1"
rand = "0.8"  # For test data generation
rand_chacha = "0.3"  # Deterministic RNG for reproducibility

# Optional GPU acceleration
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.0", optional = true }

[dev-dependencies]
approx = "0.5"
tempfile = "3.8"
env_logger = "0.10"
rand = "0.8"

[features]
default = ["parallel", "simd", "global_clamp_debug"]
parallel = []
simd = ["wide"]
gpu = ["wgpu", "bytemuck"]
optimized = ["parallel", "simd", "blas"]
blas = ["ndarray/blas"]
fused_calibration = []  # Enable fused thermal noise + calibration processing
ultra_fused_calibration = ["fused_calibration"]  # Enable ultra-fused SLC->backscatter processing
python = []
global_clamp_debug = [] # Enable clamp diagnostics (can be disabled to strip logging)
proj_geoid = ["proj"]  # Enable PROJ-based high-precision geoid calculations (requires PROJ library and libclang-dev for building)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
